# thecoverproject

./: README.md  pyproject.toml  setup.py
src/thecoverproject/: exceptions.py  navigation.py  urls.py  utils.py
tests/: test_navigation.py  test_urls.py
thecoverproject/: __init__.py  navigation.py  urls.py  utils.py
thecoverproject/tests/: test_navigation.py  test_urls.py
